correction text-align center for title of section specs

--- a/src/components/Specs/specs.scss
+++ b/src/components/Specs/specs.scss
@@ -9,6 +9,7 @@
         gap: 48px;
         &--width{
             font-size: 80px;
+            text-align: center;
         }
     }
     &__presentation{
@@ -16,6 +17,7 @@
         @include mixin.flex-center;
         flex-direction: column;
         gap: 48px;
+        text-align: center;
     }
     &__table{
         width: 100%;
